@@ -28,7 +28,8 @@ from sphinx.util.texescape import tex_escape_map
 from sphinx.util.smartypants import educateQuotesLatex
 
 HEADER = r'''%% Generated by Sphinx.
-\documentclass[%(papersize)s,%(pointsize)s%(classoptions)s]{%(docclass)s}
+\def\sphinxdocclass{%(docclass)s}
+\documentclass[%(papersize)s,%(pointsize)s%(classoptions)s]{%(wrapperclass)s}
 %(inputenc)s
 %(utf8extra)s
 %(fontenc)s
@@ -135,7 +136,6 @@ class LaTeXTranslator(nodes.NodeVisitor):
     ignore_missing_images = False
 
     default_elements = {
-        'docclass':        'manual',
         'papersize':       'letterpaper',
         'pointsize':       '10pt',
         'classoptions':    '',
@@ -175,7 +175,7 @@ class LaTeXTranslator(nodes.NodeVisitor):
 
         self.elements = self.default_elements.copy()
         self.elements.update({
-            'docclass':     document.settings.docclass,
+            'wrapperclass': 'sphinx' + document.settings.docclass,
             'papersize':    papersize,
             'pointsize':    builder.config.latex_font_size,
             # if empty, the title is set to the first section title
@@ -189,6 +189,11 @@ class LaTeXTranslator(nodes.NodeVisitor):
             'modindexname': _('Module Index'),
             'indexname':    _('Index'),
         })
+        if document.settings.docclass == 'howto':
+            docclass = builder.config.latex_docclass.get('howto', 'article')
+        else:
+            docclass = builder.config.latex_docclass.get('manual', 'report')
+        self.elements['docclass'] = docclass
         if builder.config.latex_logo:
             self.elements['logo'] = '\\includegraphics{%s}\\par' % \
                                     path.basename(builder.config.latex_logo)
