@@ -1,6 +1,9 @@
 Release 1.0 (in development)
 ============================
 
+* Added the ``latex_docclass`` config value and made the "twoside"
+  documentclass option overridable by "oneside".
+
 * Added the ``extlinks`` extension.
 
 * Allow searching for object names including the module name, like
